added"name-zhongkai"

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Z's class homepage</title>
+    <title>zhongkaili</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
 <body>
 
-  <h1>Z’s class homepage</h1>
+  <h1>zhongkaili</h1>
 
   <h2>Exercises</h2>
   <ol>
