--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 
 <head>
-    <title>zhongkaili</title>
+    <title>Zhongkai's page</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
 <body>
 
-  <h1>zhongkaili</h1>
+  <h1>Zhongkai's page</h1> 
 
   <h2>Exercises</h2>
   <ol>
-  	<li><a href="exercise1">House of Dust</a></li>
+  	<li><a href="house-of-dust.html">House of Dust</a></li>
   </ol>
 
   <h2>Projects</h2>
