--- a/house-of-dust.html
+++ b/house-of-dust.html
@@ -16,15 +16,15 @@
 		/* You can change the colors, font, and so on below */
 
 		body {
-			margin: 75px;
-			font-size: 20px;
+			margin: 200px;
+			font-size: 50px;
 			text-transform: uppercase;
 			font-family: "Courier New", Courier, monospace;
 		}
 
 		.button-container {
 			position: fixed;
-			bottom: 75px;
+			top: 350px;
 			left: 75px;
 		}
 
