--- a/house-of-dust.html
+++ b/house-of-dust.html
@@ -17,9 +17,10 @@
 
 		body {
 			margin: 200px;
-			font-size: 50px;
+			font-size: 400px;
 			text-transform: uppercase;
-			font-family: "Courier New", Courier, monospace;
+			font-family: "verdana", Courier, monospace;
+			color: blue 
 		}
 
 		.button-container {
