--- a/house-of-dust.html
+++ b/house-of-dust.html
@@ -20,7 +20,7 @@
 			font-size: 400px;
 			text-transform: uppercase;
 			font-family: "verdana", Courier, monospace;
-			color: blue 
+			color: #00FFFF
 		}
 
 		.button-container {
