25 variations- home page

--- a/house-of-dust.html
+++ b/house-of-dust.html
@@ -19,8 +19,9 @@
 			margin: 200px;
 			font-size: 400px;
 			text-transform: uppercase;
-			font-family: "verdana", Courier, monospace;
+			font-family: "Times New Roman", Georgia, Serif;
 			color: #00FFFF
+	
 		}
 
 		.button-container {
