--- a/index.html
+++ b/index.html
@@ -2,28 +2,75 @@
 <html>
 
 <head>
-    <title>Zhongkai's page</title>
+    <title> &nbsp ☻ &nbsp Zhongkai's page </title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
+
+
+
+    <style>
+
+    body {
+      margin: 89px;
+      color: black;
+      font-family: "Georgia", Courier, Sans-sarif;
+      background-color: #B9ECF2;
+      font-size: 1em;
+
+      background-image: url("http://img.ffffound.com/static-data/assets/6/78608655acdab07081c156c26c8de01c084994cc_m.gif");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+
+
+    }
+
+     a {
+        text-decoration: none;
+        color: #796CFF;
+        font-size: 3em
+      }
+      
+
+    </style>
+
 </head>
 
 <body>
 
-  <h1>Zhongkai's page</h1> 
+  <h1>
+  <p> &nbsp ☺ &nbsp Zhongkai's page </p>
+  <p>
+
+  ──────▄▄▄▄▄███████████████████▄▄▄▄▄──────
+　　────▄██████████▀▀▀▀▀▀▀▀▀▀██████▀████▄────
+　　──▄██▀████████▄─────────────▀▀████─▀██▄──
+　　─▀██▄▄██████████████████▄▄▄─────────▄██▀─
+　　───▀█████████████████████████▄────▄██▀───
+　　─────▀████▀▀▀▀▀▀▀▀▀▀▀▀█████████▄▄██▀─────
+　　───────▀███▄──────────────▀██████▀───────
+　　─────────▀██████▄─────────▄████▀─────────
+　　────────────▀█████▄▄▄▄▄▄▄███▀────────────
+　　──────────────▀████▀▀▀████▀──────────────
+　　────────────────▀███▄███▀────────────────
+　　───────────────────▀█▀───────────────────
+</p>
+</h1> 
 
   <h2>Exercises</h2>
   <ol>
-  	<li><a href="house-of-dust.html">House of Dust</a></li>
+  	<li><a href="house-of-dust.html">House of Dust &nbsp ▒ &nbsp </a></li>
   </ol>
 
   <h2>Projects</h2>
   <ol>
-  	<li><a href="project1">Visual Translation</a></li>
-    <li><a href="project2">25 Variations</a></li>
+  	<li><a href="project-2">Visual Translation &nbsp ◐ &nbsp ↔ &nbsp ◑ &nbsp 
+    </a></li>
+    <li><a href="project-1/25_variations.html">25 Variations &nbsp ▩ &nbsp </a></li>
   </ol>
 
-  <h2>Interview</h2>
-  Coming soon!
+  <h3>Interview</h3>
+  Coming soon! ▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ◕‿◕ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ 
 
 </body>
 	
