--- a/project-1/25_variations.html
+++ b/project-1/25_variations.html
@@ -9,17 +9,21 @@
 
      <style>
       body {
-        background: #8FCC92;
-        margin: 125px;
-        font-size: 0.6em;
+        margin: 75px;
+        font-size: 0.7em;
         text-transform: lowercase;
-        font-family: Optima, Palatino, sans-serif;
+        font-family: Palatino, Palatino, sans-serif;
+        background: #F2D7C3;
+        background-image: url(http://img.ffffound.com/static-data/assets/6/f5dafb76db5e4e18c2df51e659d3e17a45739219_m.gif);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: right;
       }
       
       a {
         text-decoration: none;
-        color: blue;
-        font-size: 1em
+        color: #796CFF;
+        font-size: 6em
       }
       
     </style>
@@ -28,15 +32,20 @@
 
 <body>
 
-  <h1>25 Variations</h1>
+  <h1>
+  <p>◢▆▅▄▃ &nbsp 25 Variations &nbsp ◢▆▅▄▃ &nbsp 二十五种改写的 &nbsp 同一首诗歌 &nbsp ◢▆▅▄▃ </p> 
+  </h1>
 
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   <h2>Level 1</h2>
+
   <ol>
-  	<li><a href="variation_01.html">01</a></li>
-    <li><a href="variation_02.html">02</a></li>
-    <li><a href="variation_03.html">03</a></li>
-    <li><a href="variation_04.html">04</a></li>
-    <li><a href="variation_05.html">05</a></li>
+  	<li><a href="variation_01.html">01 &nbsp ( &nbsp ͡ &nbsp° &nbsp ͜ʖ &nbsp ͡ &nbsp° ) </a></li>
+    <li><a href="variation_02.html">02 &nbsp ༼&nbsp´&nbsp◓&nbspɷ&nbsp◔&nbsp`&nbsp༽ </a></li>
+    <li><a href="variation_03.html">03 &nbsp ↁ &nbsp _ &nbsp ↁ &nbsp </a></li>
+    <li><a href="variation_04.html">04  &nbsp (́ &nbsp ◕ &nbsp ◞ &nbsp ౪ &nbsp ◟ &nbsp ◕ &nbsp‵ &nbsp ) &nbsp </a></li>
+    <li><a href="variation_05.html">05 &nbsp´ &nbsp ◔ &nbsp ‸ &nbsp ◔ &nbsp'</a></li>
   </ol>
 
   <h2>Level 2</h2>
