--- a/house-of-dust.html
+++ b/house-of-dust.html
@@ -16,11 +16,14 @@
 		/* You can change the colors, font, and so on below */
 
 		body {
-			margin: 200px;
-			font-size: 400px;
+			background: #F2E8B9;
+			margin: 75px;
+			font-size: 100px;
 			text-transform: uppercase;
 			font-family: "Times New Roman", Georgia, Serif;
-			color: #00FFFF
+			color: #7F7A3C
+			text-shadow: 1px 1px #00ff00;
+			
 	
 		}
 
