--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <h2>Projects</h2>
   <ol>
-  	<li><a href="project-2">Visual Translation &nbsp ◐ &nbsp ↔ &nbsp ◑ &nbsp 
+  	<li><a href="https://www.instagram.com/zz_a_b_c_d_e_f_g/">Visual Translation &nbsp ◐ &nbsp ↔ &nbsp ◑ &nbsp 
     </a></li>
     <li><a href="project-1/25_variations.html">25 Variations &nbsp ▩ &nbsp </a></li>
   </ol>
