--- a/project-2/visual_translation.html
+++ b/project-2/visual_translation.html
@@ -11,12 +11,11 @@
 
 <div class="container">
 
-<h1>Visual Translations</h1> <link rel="https://www.instagram.com/zz_a_b_c_d_e_f_g/">
-
+<h1>Visual Translations</h1> 
 <hr>
 
 <br>
-<a href="" target="_blank">Source</a><br>
+<a href=“https://www.instagram.com/zz_a_b_c_d_e_f_g/”>target="_blank">Source</a><br>
 <a href="" target="_blank">My account</a>
 <br><br><br>
 
