--- a/project-1/variation_10.html
+++ b/project-1/variation_10.html
@@ -21,7 +21,7 @@
       
     </style>
 
-  <span style ="position:absolute;background-color:#9FE8E2;right:20px;top:10px;font-size: 2em">
+  <span style ="position:absolute;right:20px;top:10px;font-size: 2em">
   <br>&nbsp&nbsp&nbsp&nbsp&nbsp f  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <p> ormat </p>
   <br>re &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format<br>
   dis  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  format
