--- a/project-1/variation_09.html
+++ b/project-1/variation_09.html
@@ -16,8 +16,8 @@
     body {
       color:black ;
       font-family: "Lucida Grande", Courier, Sans-sarif;
-      background-color: pink;
-      font-size: 1.6em
+      background-color: white;
+      font-size: 0.6em
 
     </style>
 
