--- a/project-1/variation_02.html
+++ b/project-1/variation_02.html
@@ -11,10 +11,10 @@
 
     body {
       margin: 89px;
-      color: #B7C2C7;
+      color: #black;
       font-family: "Lucida Grande", Courier, Sans-sarif;
       background-color: white;
-      font-size: 1.5em;
+      font-size: 1em;
     }
 
      a {
