--- a/project-1/variation_03.html
+++ b/project-1/variation_03.html
@@ -11,7 +11,7 @@
 
     body {
       margin: 89px;
-      color: #B7C2C7;
+      color: black;
       font-family: "Lucida Grande", Courier, Sans-sarif;
       background-color: white;
       font-size: 1.5em;
