--- a/project-1/variation_10.html
+++ b/project-1/variation_10.html
@@ -14,10 +14,10 @@
    <style>
 
     body {
-      color:white;
+      color:black;
       font-family: "mono type", Courier, sarif;
-      background-color: black;
-      font-size: 1.2em
+      background-color: white;
+      font-size: 0.8em
       
     </style>
 
