--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
   <h1>
-  <p> &nbsp ☺ &nbsp Zhongkai's page </p>
+  <p>Zhongkai's page </p>
   <p>
 
   ──────▄▄▄▄▄███████████████████▄▄▄▄▄──────
