--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
   <h2>Exercises</h2>
   <ol>
   	<li><a href="house-of-dust.html">House of Dust &nbsp ▒ &nbsp </a></li>
+     <li><a href="carl-dier-style.html">Markup Carl Dier</a></li>
+    <li><a href="carl-dier-style-2.html">Carl Deir CSS Exercise</a></li>
   </ol>
 
   <h2>Projects</h2>
