--- a/project-1/25_variations.html
+++ b/project-1/25_variations.html
@@ -10,10 +10,10 @@
      <style>
       body {
         margin: 75px;
-        font-size: 0.7em;
+        font-size: 0.4em;
         text-transform: lowercase;
         font-family: Palatino, Palatino, sans-serif;
-        background: #F2D7C3;
+        background: white;
         background-image: url(http://img.ffffound.com/static-data/assets/6/f5dafb76db5e4e18c2df51e659d3e17a45739219_m.gif);
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -23,9 +23,18 @@
       a {
         text-decoration: none;
         color: #796CFF;
-        font-size: 6em
+        font-size: 8em
       }
       
+    </style>
+
+    <style>
+    a{color: black;}
+
+    h1 {background: #00FFFF}
+    h2 {background: #A744FF}
+    ol {background: #FFF9E1}
+
     </style>
 
 </head>
@@ -38,7 +47,8 @@
 
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  <h2>Level 1</h2>
+ 
+ <h2>Level 1</h2>
 
   <ol>
   	<li><a href="variation_01.html">01 &nbsp ( &nbsp ͡ &nbsp° &nbsp ͜ʖ &nbsp ͡ &nbsp° ) </a></li>
