--- a/project-1/variation_14.html
+++ b/project-1/variation_14.html
@@ -11,10 +11,10 @@
    <style>
 
     body {
-      color:black;
+      color:#1D0CFF;
       font-family: "mono type", Courier, sarif;
       background-color: white;
-      font-size: 1em
+      font-size: 2em
       
     </style>
 
