--- a/index.html
+++ b/index.html
@@ -1,78 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title> &nbsp ☻ &nbsp Zhongkai's page </title>
+  <head>
+    <title> ☻ </title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
-    
+  </head>
 
+  <style type="text/css">
 
+  body {
+  font-size: 10pt;
+  font-family: monospace, times, Serif;
+  color:#085A0D;
+  text-decoration:blink;
+  background-color:white;
+  background-image: url("assets/images/main.jpg");
+  background-position:top right;
+  background-repeat: no-repeat;
+  background-origin:border-box;
+  background-size:contain；
+  }
 
-    <style>
+  </style>
 
-    body {
-      margin: 89px;
-      color: black;
-      font-family: "Georgia", Courier, Sans-sarif;
-      background-color: #B9ECF2;
-      font-size: 1em;
+  <body>
 
-      background-image: url("http://img.ffffound.com/static-data/assets/6/78608655acdab07081c156c26c8de01c084994cc_m.gif");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
+  <h2>
+  KAI
+  </h2> 
 
-
-    }
-
-     a {
-        text-decoration: none;
-        color: #796CFF;
-        font-size: 3em
-      }
-      
-
-    </style>
-
-</head>
-
-<body>
-
-  <h1>
-  <p>Zhongkai's page </p>
-  <p>
-
-  ──────▄▄▄▄▄███████████████████▄▄▄▄▄──────
-　　────▄██████████▀▀▀▀▀▀▀▀▀▀██████▀████▄────
-　　──▄██▀████████▄─────────────▀▀████─▀██▄──
-　　─▀██▄▄██████████████████▄▄▄─────────▄██▀─
-　　───▀█████████████████████████▄────▄██▀───
-　　─────▀████▀▀▀▀▀▀▀▀▀▀▀▀█████████▄▄██▀─────
-　　───────▀███▄──────────────▀██████▀───────
-　　─────────▀██████▄─────────▄████▀─────────
-　　────────────▀█████▄▄▄▄▄▄▄███▀────────────
-　　──────────────▀████▀▀▀████▀──────────────
-　　────────────────▀███▄███▀────────────────
-　　───────────────────▀█▀───────────────────
-</p>
-</h1> 
-
-  <h2>Exercises</h2>
-  <ol>
-  	<li><a href="house-of-dust.html">House of Dust &nbsp ▒ &nbsp </a></li>
-     <li><a href="carl-dier-style.html">Markup Carl Dier</a></li>
-    <li><a href="carl-dier-style-2.html">Carl Deir CSS Exercise</a></li>
-  </ol>
+  <h2> Exercises </h2>
+  <ul>
+  	<li><a href="house-of-dust.html">House of Dust ▒  </a></li>
+    <li><a href="carl-dier-style.html">Markup Carl Dier  ☆  </a></li>
+    <li><a href="carl-dier-style-2.html">Carl Deir CSS Exercise  ★   </a></li>
+    <li><a href="coding-from-life.html">Coding From Life  〓   </a></li>
+  </ul>
 
   <h2>Projects</h2>
-  <ol>
-  	<li> <a href="https://www.instagram.com/zz_a_b_c_d_e_f_g/"> Visual Translation &nbsp ◐ &nbsp ↔ &nbsp ◑ &nbsp</a></li>
-    <li> <a href="project-1/25_variations.html">25 Variations &nbsp ▩ &nbsp </a></li>
-  </ol>
+  <ul>
+  	<li> <a href="https://www.instagram.com/zz_a_b_c_d_e_f_g/"> Visual Translation  ◐↔◑  </a></li>
+    <li> <a href="project-1/25_variations.html">25 Variations ▩ </a></li>
+  </ul>
 
-  <h3>Interview</h3>
-  Coming soon! ▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀ ▄▀
+  <h2>Interview</h2>
+  Coming soon!
 
 </body>
 	
