--- a/project-1/25_variations.html
+++ b/project-1/25_variations.html
@@ -5,94 +5,87 @@
 <head>
     <title>25 Variations</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
+</head>
 
      <style>
       body {
-        margin: 75px;
-        font-size: 0.4em;
-        text-transform: lowercase;
-        font-family: Palatino, Palatino, sans-serif;
+        font-family: Arial , times, sans-serif;
         background: white;
-        background-image: url(http://img.ffffound.com/static-data/assets/6/f5dafb76db5e4e18c2df51e659d3e17a45739219_m.gif);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-position: right;
-      }
+        background-image: url("https://s-media-cache-ak0.pinimg.com/736x/41/e5/f8/41e5f85c7daa89c94c2f312dc8a63a0e.jpg");
+        background-position:center;
+        background-repeat:no-repeat;
+
+
+        background-size:10%;
+        font-size: 10pt;
+        color: black;
+        text-decoration:blink;
+        list-style-type:square;
+        margin: 10px 10px 10px 10px;
+        padding: 10px 40px 15px;
+
+        border-style:groove;
       
-      a {
-        text-decoration: none;
-        color: #796CFF;
-        font-size: 8em
+        border-width:340px;
+        border-color:#FFDDDA #FFC7CD #FFDDDA #FFDDDA ;
+
+
       }
       
     </style>
-
-    <style>
-    a{color: black;}
-
-    h1 {background: #00FFFF}
-    h2 {background: #A744FF}
-    ol {background: #FFF9E1}
-
-    </style>
-
-</head>
 
 <body>
 
-  <h1>
-  <p>◢▆▅▄▃ &nbsp 25 Variations &nbsp ◢▆▅▄▃ &nbsp 二十五种改写的 &nbsp 同一首诗歌 &nbsp ◢▆▅▄▃ </p> 
-  </h1>
+ <p> 25 Variations </p> 
 
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
  
- <h2>Level 1</h2>
+Level 1
 
-  <ol>
-  	<li><a href="variation_01.html">01 &nbsp ( &nbsp ͡ &nbsp° &nbsp ͜ʖ &nbsp ͡ &nbsp° ) </a></li>
-    <li><a href="variation_02.html">02 &nbsp ༼&nbsp´&nbsp◓&nbspɷ&nbsp◔&nbsp`&nbsp༽ </a></li>
-    <li><a href="variation_03.html">03 &nbsp ↁ &nbsp _ &nbsp ↁ &nbsp </a></li>
-    <li><a href="variation_04.html">04  &nbsp (́ &nbsp ◕ &nbsp ◞ &nbsp ౪ &nbsp ◟ &nbsp ◕ &nbsp‵ &nbsp ) &nbsp </a></li>
-    <li><a href="variation_05.html">05 &nbsp´ &nbsp ◔ &nbsp ‸ &nbsp ◔ &nbsp'</a></li>
-  </ol>
+  <ul>
+  	<li><a href="variation_01.html">01  </a></li>
+    <li><a href="variation_02.html">02  </a></li>
+    <li><a href="variation_03.html">03  </a></li>
+    <li><a href="variation_04.html">04  </a></li>
+    <li><a href="variation_05.html">05  </a></li>
+  </ul>
 
-  <h2>Level 2</h2>
-  <ol>
+Level 2
+  <ul>
   	<li><a href="variation_06.html">06</a></li>
     <li><a href="variation_07.html">07</a></li>
     <li><a href="variation_08.html">08</a></li>
     <li><a href="variation_09.html">09</a></li>
     <li><a href="variation_10.html">10</a></li>
-  </ol>
+  </ul>
 
-  <h2>Level 3</h2>
-  <ol>
+  Level 3
+  <ul>
     <li><a href="variation_11.html">11</a></li>
     <li><a href="variation_12.html">12</a></li>
     <li><a href="variation_13.html">13</a></li>
     <li><a href="variation_14.html">14</a></li>
     <li><a href="variation_15.html">15</a></li>
-  </ol>
+  </ul>
 
-  <h2>Level 4</h2>
-  <ol>
+  Level 4
+  <ul>
     <li><a href="variation_16.html">16</a></li>
     <li><a href="variation_17.html">17</a></li>
     <li><a href="variation_18.html">18</a></li>
     <li><a href="variation_19.html">19</a></li>
     <li><a href="variation_20.html">20</a></li>
-  </ol>
+  </ul>
 
-  <h2>Level 5</h2>
-  <ol>
+  Level 5
+  <ul>
     <li><a href="variation_21.html">21</a></li>
     <li><a href="variation_22.html">22</a></li>
     <li><a href="variation_23.html">23</a></li>
     <li><a href="variation_24.html">24</a></li>
     <li><a href="variation_25.html">25</a></li>
-  </ol>
+  </ul>
 
 
 </body>
